# NgocSonRAG

./: README.md
ngocson-api/: main.py  pyproject.toml
ngocson-api/notebooks/: test.ipynb
ngocson-api/src/: config.py  main.py
ngocson-api/src/app/: app.py
ngocson-api/src/models/: documents.py  vector_store.py
ngocson-api/src/services/: embedding.py  rag.py
